cabal-version:      2.4
name:               worley-noise
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Creepsy
maintainer:         Robin.gd@outlook.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable worley-noise
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    WorleyNoise

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0,
                      hip >= 1.5.6.0,
                      vector >= 0.12.3.1,
                      random >= 1.2.1.1,
                      split >= 0.2.3.5       
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
        -O2
        -threaded